Update index.html to modify author links, update video source, and improve content formatting. Changed author email to a clickable link and updated the video source to a new file. Adjusted text formatting for better readability.

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="mailto:l.grad@mimuw.edu.pl" target="_blank">Łukasz Grad</a></span>
+                <a href="https://www.linkedin.com/in/%C5%82ukasz-grad-1942a5173/" target="_blank">Łukasz Grad</a><br>
+                <a href="mailto:l.grad@mimuw.edu.pl">l.grad@mimuw.edu.pl</a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">University of Warsaw, Poland<br>ReSpo.Vision, Poland<br><a
-                  href="https://vap.aau.dk/cvsports/" target="_blank">CVPR CVsports Workshop 2025</a></span>
+                  href="https://vap.aau.dk/cvsports/" target="_blank">CVPR CVsports 2025</a></span>
             </div>
 
             <div class="column has-text-centered">
@@ -129,7 +130,7 @@
       <div class="hero-body">
         <video poster="" id="tree" autoplay controls muted loop height="100%">
           <!-- Your video here -->
-          <source src="static/videos/banner_video.mp4" type="video/mp4">
+          <source src="static/videos/player_tracks_seed_1234.mp4" type="video/mp4">
         </video>
         <h2 class="subtitle has-text-centered">
           Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat
@@ -301,8 +302,8 @@
 
             <p>
               This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template"
-                target="_blank">Academic Project Page Template</a> which was adopted from the <a
-                href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+                target="_blank">Academic Project Page Template</a> which was adopted from the <a
+                href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
               You are free to borrow the source code of this website, we just ask that you link back to this page in the
               footer. <br> This website is licensed under a <a rel="license"
                 href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
