--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer" />
   <meta property="og:description"
     content="A single-stage uncertainty-aware approach for jersey number recognition in soccer using digit-compositional classifiers and tracklet aggregation" />
-  <meta property="og:url" content="URL OF THE WEBSITE" />
+  <meta property="og:url" content="https://lukaszgrad.github.io/jnr/" />
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="static/images/cvsports_method2.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -21,7 +21,7 @@
   <meta name="twitter:description"
     content="A single-stage uncertainty-aware approach for jersey number recognition in soccer using digit-compositional classifiers and tracklet aggregation">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
+  <meta name="twitter:image" content="static/images/cvsports_method2.png">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords"
@@ -30,7 +30,7 @@
 
 
   <title>Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/rv_logo.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -83,20 +83,9 @@
                   </a>
                 </span>
 
-                <!-- Supplementary PDF link -->
-                <span class="link-block">
-                  <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
-                    <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
-                    </span>
-                    <span>Supplementary</span>
-                  </a>
-                </span>
-
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                  <a href="https://github.com/lukaszgrad/uncertainty-jnr" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
