Enhance index.html by adding new metadata for improved SEO and social media sharing. Updated keywords to include machine learning and deep learning terms, added author and robots meta tags, and included Open Graph properties for better site representation.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords"
-    content="jersey number recognition, soccer, computer vision, uncertainty quantification, sports analytics, digit classification, Dirichlet model">
+    content="jersey number recognition, soccer, computer vision, uncertainty quantification, sports analytics, digit classification, Dirichlet model, machine learning, deep learning, ViT, vision transformer, SoccerNet, CVPR">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Łukasz Grad">
+  <meta name="robots" content="index, follow">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer">
 
 
   <title>Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer</title>
