--- a/index.html
+++ b/index.html
@@ -444,20 +444,19 @@
   End video carousel
 
 
-  Paper poster
+  Paper poster -->
   <section class="hero is-small is-light">
     <div class="hero-body">
-      <div class="container">
-        <h2 class="title">Poster</h2>
+      <div class="container is-max-desktop">
+        <h2 class="title has-text-centered">Poster</h2>
 
-        <iframe src="static/pdfs/sample.pdf" width="100%" height="550">
+        <iframe src="static/pdfs/cvsports_poster_final.pdf" width="100%" height="600">
         </iframe>
 
       </div>
     </div>
   </section>
-  End paper poster
-  -->
+  <!-- End paper poster -->
 
 
   <!--BibTex citation -->
