Update index.html to replace Arxiv PDF link with CVPR paper link, add a new supplement link, and modify the dataset link placeholder. Updated BibTeX citation format for improved clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -76,14 +76,25 @@
 
             <div class="column has-text-centered">
               <div class="publication-links">
-                <!-- Arxiv PDF link -->
+                <!-- CVPR Paper PDF link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://openaccess.thecvf.com/content/CVPR2025W/CVSPORTS/papers/Grad_Single-Stage_Uncertainty-Aware_Jersey_Number_Recognition_in_Soccer_CVPRW_2025_paper.pdf"
+                    target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Paper</span>
+                  </a>
+                </span>
+
+                <!-- Supplement link -->
+                <span class="link-block">
+                  <a href="https://openaccess.thecvf.com/content/CVPR2025W/CVSPORTS/supplemental/Grad_Single-Stage_Uncertainty-Aware_Jersey_CVPRW_2025_supplemental.pdf"
+                    target="_blank" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Supplement</span>
                   </a>
                 </span>
 
@@ -98,14 +109,13 @@
                   </a>
                 </span>
 
-                <!-- ArXiv abstract Link -->
+                <!-- Dataset link placeholder -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="#" target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="ai ai-arxiv"></i>
+                      <i class="fas fa-database"></i>
                     </span>
-                    <span>arXiv</span>
+                    <span>Dataset</span>
                   </a>
                 </span>
               </div>
@@ -463,11 +473,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@InProceedings{Grad2025,
-  title={Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer},
-  author={Grad, Łukasz},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVSports)},
-  year={2025}
+      <pre><code>@InProceedings{Grad_2025_CVPR,
+    author    = {Grad, {\L}ukasz},
+    title     = {Single-Stage Uncertainty-Aware Jersey Number Recognition in Soccer},
+    booktitle = {Proceedings of the Computer Vision and Pattern Recognition Conference (CVPR) Workshops},
+    month     = {June},
+    year      = {2025},
+    pages     = {6102-6110}
 }</code></pre>
     </div>
   </section>
