Update index.html to modify the dataset link, replacing the placeholder with a direct link to the dataset documentation on GitHub for improved accessibility.

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
                   </a>
                 </span>
 
-                <!-- Dataset link placeholder -->
+                <!-- Dataset link -->
                 <span class="link-block">
-                  <a href="#" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/lukaszgrad/uncertainty-jnr/blob/main/docs/DATA.md" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-database"></i>
                     </span>
